"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

BRANCH CHECKLIST: code review TODO/FIXME through all prsim code!

2008-09-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-07:
	  prsim: added State::translate_to_global_node (local -> global index)
		re-implemented many recursive traversals, including dump, 
		fanin, fanout, and why-diagnostics.  
		Note: rule printing for new impl. will differ from prev.


2008-08-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-06:
	  prsim: Started migrating some structure tests to the
		unique_process_subgraph class, including helper functions.
		Renamed process_expr_map to global_expr_process_id_map.
		Factored out lookup_global_expr_process(expr-id).
		More clean up of get_pull() calls.
	  Next: rewrite some recursive diagnostics, splitting off 
		process-local functions from global lookups.  


2008-08-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-05:
	  prsim: Converted use of uchars for node values over to value_enum, 
		for clarity, and caught some suspicious code!
		Also cleaned up some uses of pull_enum, 
		eliminating confusing conversions to/from char.
		Hope compiler is smart enough to use size uchar, 
		given value range.  
	  Next: structure integrity checks, recursive diagnostics
		with PRSIM_INDIRECT_EXPRESSION_MAP=1.
		

2008-08-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-04:
	  More simple conversions of node pull-states using new fanin struct.
	  Next: work on structure integrity checks and recursive diagnostics.


2008-08-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-03:
	  Moved enumerations to "enums.h" outside of structs, cleaned-up.